feat(cors): aceita lista CSV + padrões com wildcard pra previews Vercel